=head1 Perltidy Change Log

 You can help Perltidy evolve into a better program.  If you
 have hit a bug, unusual behavior, annoyance, or have a
 suggested improvement, please send a note to perltidy at
 users.sourceforge.net.  

=head2 2002 xx xx

 -outdent-long-comments (-olc) has been re-instated as a default, since
  it works much better now.  Use -nolc if you want to prevent it.

 -Improved alignment of opening braces.  Needed for improved switch/case
  formatting, and also suggested by Mark Olesen for sort/map/grep
  formatting.  For example:

  OLD:
    @modified =
      map { $_->[0] }
      sort { $a->[1] <=> $b->[1] }
      map { [ $_, -M ] } @filenames;

  NEW:
    @modified =
      map  { $_->[0] }
      sort { $a->[1] <=> $b->[1] }
      map  { [ $_, -M ] } @filenames;

 -Eliminated alignments across unrelated statements. Example:
  OLD:
    $borrowerinfo->configure( -state => 'disabled' );
    $borrowerinfo->grid( -col        => 1, -row => 0, -sticky => 'w' );

  NEW:  
    $borrowerinfo->configure( -state => 'disabled' );
    $borrowerinfo->grid( -col => 1, -row => 0, -sticky => 'w' );

  Thanks to Mark Olesen for noting this.

 -Numerous other minor improvements in vertical alignment.

 -Fixed glitch introduced in previous release where -pre option
 was not outputting a leading html <pre> tag.

 -Added check for 'perltidy file.pl -o file.pl', which causes file.pl
 to be lost. (The -b option should be used instead). Thanks to mreister
 for reporting this problem.

=head2 2002 11 06

 -Switch/case or given/when syntax is now recognized.  Its vertical alignment
 is not great yet, but it parses ok.  The words 'switch', 'case', 'given', and
 'when' are now treated as keywords.  If this causes trouble with older code,
 we could introduce a switch to deactivate it.  Thanks to Stan Brown and Jochen
 Schneider for recommending this.

 -Corrected error parsing sub attributes with call parameters.
 Thanks to Marc Kerr for catching this.
